<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:clipToPadding="false"
        android:fillViewport="true"
        android:padding="24dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="vertical">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/illu_enable_totp_complete" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="@string/enable_totp_complete_title"
                android:textAppearance="?textAppearanceHeadline1"
                android:textColor="@color/text_neutral_catchy" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="@string/enable_totp_complete_description"
                android:textAppearance="?textAppearanceBody1"
                android:textColor="@color/text_neutral_standard" />

        </LinearLayout>

    </ScrollView>

    <com.dashlane.ui.activities.intro.IntroButtonBarLayout
        android:id="@+id/buttons_layout"
        style="?buttonBarStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="bottom|end"
        android:layoutDirection="locale"
        android:orientation="horizontal"
        android:paddingTop="8dp"
        android:paddingBottom="8dp">

        <Button
            android:id="@+id/button_negative"
            style="?borderlessButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:text="@string/enable_totp_complete_cta_negative" />

        <Button
            android:id="@+id/button_positive"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:text="@string/enable_totp_complete_cta_positive"
            tools:ignore="ButtonStyle" />

    </com.dashlane.ui.activities.intro.IntroButtonBarLayout>
</LinearLayout>