<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="32dp">

    <androidx.core.widget.NestedScrollView
        android:id="@+id/content"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="16dp"
        app:layout_constraintBottom_toTopOf="@+id/buttonBar"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/title"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:gravity="center_vertical"
                android:paddingBottom="16dp"
                android:textAppearance="?textAppearanceHeadline1"
                app:layout_constraintBottom_toTopOf="@+id/description"
                app:layout_constraintTop_toTopOf="parent"
                tools:text="@string/disable_totp_enter_token_recovery_dialog_title" />

            <TextView
                android:id="@+id/description"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:paddingBottom="16dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/title"
                tools:text="@string/disable_totp_enter_token_recovery_dialog_backup_description" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/editRecoveryCode"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/description"
                android:hint="@string/disable_totp_enter_token_recovery_dialog_backup_hint"
                tools:theme="@style/Theme.AppCompat">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />

            </com.google.android.material.textfield.TextInputLayout>

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.core.widget.NestedScrollView>

    <com.dashlane.ui.activities.intro.IntroButtonBarLayout
        android:id="@+id/buttonBar"
        style="?buttonBarStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layoutDirection="locale"
        android:orientation="horizontal"
        app:layout_constraintTop_toBottomOf="@+id/content">

        <Button
            android:id="@+id/negative"
            style="?borderlessButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:lines="1"
            tools:text="@string/disable_totp_enter_token_recovery_dialog_backup_button_negative" />

        <Button
            android:id="@+id/positive"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:lines="1"
            tools:ignore="ButtonStyle"
            tools:text="@string/disable_totp_enter_token_recovery_dialog_backup_button_positive" />

    </com.dashlane.ui.activities.intro.IntroButtonBarLayout>

</androidx.constraintlayout.widget.ConstraintLayout>