<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/background_enable_totp_surface">

    <TextView
        android:id="@+id/option_title"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="24dp"
        android:fontFamily="@font/roboto_medium"
        android:text="@string/enable_totp_recovery_info_option_title"
        android:textAppearance="?textAppearanceBody1"
        android:textColor="@color/text_neutral_catchy"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/option_1_icon"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_enable_totp_recovery_info_option"
        app:layout_constraintBottom_toBottomOf="@+id/option_1_text"
        app:layout_constraintStart_toStartOf="@+id/option_title"
        app:layout_constraintTop_toTopOf="@+id/option_1_text"
        app:tint="@color/text_brand_standard" />

    <TextView
        android:id="@+id/option_1_text"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="24dp"
        android:text="@string/enable_totp_recovery_info_option_1"
        android:textAppearance="?textAppearanceBody1"
        android:textColor="@color/text_neutral_catchy"
        app:layout_constraintEnd_toEndOf="@+id/option_title"
        app:layout_constraintStart_toEndOf="@+id/option_1_icon"
        app:layout_constraintTop_toBottomOf="@+id/option_title" />

    <ImageView
        android:id="@+id/option_2_icon"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_enable_totp_recovery_info_option"
        app:layout_constraintBottom_toBottomOf="@+id/option_2_text"
        app:layout_constraintEnd_toEndOf="@+id/option_1_icon"
        app:layout_constraintStart_toStartOf="@+id/option_1_icon"
        app:layout_constraintTop_toTopOf="@+id/option_2_text"
        app:tint="@color/text_brand_standard" />

    <TextView
        android:id="@+id/option_2_text"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="24dp"
        android:text="@string/enable_totp_recovery_info_option_2"
        android:textAppearance="?textAppearanceBody1"
        android:textColor="@color/text_neutral_catchy"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/option_1_text"
        app:layout_constraintStart_toStartOf="@+id/option_1_text"
        app:layout_constraintTop_toBottomOf="@+id/option_1_text" />

</androidx.constraintlayout.widget.ConstraintLayout>